[package]
name = "cerke_online_backend_rewritten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rand = "0.8.4"
cetkaik_full_state_transition = "0.2.11"
cetkaik_core = "0.3.8"
actix-cors = "0.5.4"