[package]
edition = "2021"
name = "cerke_online_backend_rewritten"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-rt = "2.7.0"
actix-web = "3"
actix-web-httpauth = "0.5.1"
big_s = "1.0.2"
cetkaik_core = "0.3.8"
cetkaik_full_state_transition = "0.2.11"
rand = "0.8.5"
serde = "1"
serde_json = "1"
serde_repr = "0.1"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
