[package]
edition = "2021"
name = "cerke_online_backend_rewritten"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.7.0"
actix-web = "4.2.1"
actix-web-httpauth = "0.8.0"
big_s = "1.0.2"
cetkaik_core = "0.3.8"
cetkaik_full_state_transition = "0.3.0"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.88"
serde_repr = "0.1.9"
uuid = {version = "1.2.2", features = ["serde", "v4"]}
